--- a/NovaImage.vcxproj.filters
+++ b/NovaImage.vcxproj.filters
@@ -120,6 +120,9 @@
     <ClCompile Include="Widget\DiagramLineItem.cpp">
       <Filter>Widget</Filter>
     </ClCompile>
+    <ClCompile Include="Image\DicomImage.cpp">
+      <Filter>Image</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="View.h">
@@ -210,6 +213,9 @@
     </ClInclude>
     <ClInclude Include="Widget\WidgetManager.h">
       <Filter>Widget</Filter>
+    </ClInclude>
+    <ClInclude Include="Image\DicomImage.h">
+      <Filter>Image</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
