--- a/NovaImage.vcxproj
+++ b/NovaImage.vcxproj
@@ -24,6 +24,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="mainwindow.cpp" />
     <ClCompile Include="ToolBar.cpp" />
+    <ClCompile Include="ToolButton.cpp" />
     <ClCompile Include="View.cpp" />
     <ClCompile Include="Widget\BaseWidget.cpp" />
     <ClCompile Include="Widget\ColorButton.cpp" />
@@ -58,6 +59,7 @@
     <ClInclude Include="Image\ImageData.h" />
     <ClInclude Include="Image\MonoImage.h" />
     <QtMoc Include="ToolBar.h" />
+    <QtMoc Include="ToolButton.h" />
     <ClInclude Include="Widget\CommonProcessor.h" />
     <ClInclude Include="Widget\CurvesProcessor.h" />
     <QtMoc Include="Widget\DiagramItem.h" />
