Add two QToolButtons: rotation and flip

--- a/NovaImage.vcxproj
+++ b/NovaImage.vcxproj
@@ -16,7 +16,6 @@
     <ClCompile Include="GraphicsScene.cpp" />
     <ClCompile Include="GraphicsView.cpp" />
     <ClCompile Include="Image\BaseImage.cpp" />
-    <ClCompile Include="Image\BaseProcessor.cpp" />
     <ClCompile Include="Image\DicomImage.cpp" />
     <ClCompile Include="Image\GeneralImage.cpp" />
     <ClCompile Include="Image\MonoImage.cpp" />
@@ -24,23 +23,24 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="mainwindow.cpp" />
     <ClCompile Include="MouseHandler.cpp" />
+    <ClCompile Include="Processor\BaseProcessor.cpp" />
+    <ClCompile Include="Processor\CommonProcessor.cpp" />
+    <ClCompile Include="Processor\CurvesProcessor.cpp" />
+    <ClCompile Include="Processor\HistogramProcessor.cpp" />
+    <ClCompile Include="Processor\InverseProcessor.cpp" />
+    <ClCompile Include="Processor\LevelsProcessor.cpp" />
     <ClCompile Include="ToolBar.cpp" />
     <ClCompile Include="ToolButton.cpp" />
     <ClCompile Include="View.cpp" />
     <ClCompile Include="Widget\BaseWidget.cpp" />
     <ClCompile Include="Widget\ColorButton.cpp" />
-    <ClCompile Include="Widget\CommonProcessor.cpp" />
     <ClCompile Include="Widget\CommonWidget.cpp" />
-    <ClCompile Include="Widget\CurvesProcessor.cpp" />
     <ClCompile Include="Widget\CurveSquare.cpp" />
     <ClCompile Include="Widget\CurvesWidget.cpp" />
     <ClCompile Include="Widget\DiagramItem.cpp" />
     <ClCompile Include="Widget\DiagramLineItem.cpp" />
     <ClCompile Include="Widget\DiagramTextItem.cpp" />
-    <ClCompile Include="Widget\HistogramProcessor.cpp" />
     <ClCompile Include="Widget\HistogramWidget.cpp" />
-    <ClCompile Include="Widget\InverseProcessor.cpp" />
-    <ClCompile Include="Widget\LevelsProcessor.cpp" />
     <ClCompile Include="Widget\LevelsWidget.cpp" />
     <ClCompile Include="Widget\Peg.cpp" />
     <ClCompile Include="Widget\ToolBoxWidget.cpp" />
@@ -63,14 +63,15 @@
     <QtMoc Include="ToolBar.h" />
     <QtMoc Include="ToolButton.h" />
     <ClInclude Include="MouseHandler.h" />
-    <ClInclude Include="Widget\CommonProcessor.h" />
-    <ClInclude Include="Widget\CurvesProcessor.h" />
     <QtMoc Include="Widget\DiagramItem.h" />
     <QtMoc Include="Widget\DiagramTextItem.h" />
     <QtMoc Include="Widget\DiagramLineItem.h" />
-    <ClInclude Include="Widget\HistogramProcessor.h" />
-    <ClInclude Include="Widget\InverseProcessor.h" />
-    <ClInclude Include="Widget\LevelsProcessor.h" />
+    <ClInclude Include="Processor\BaseProcessor.h" />
+    <ClInclude Include="Processor\CommonProcessor.h" />
+    <ClInclude Include="Processor\CurvesProcessor.h" />
+    <ClInclude Include="Processor\HistogramProcessor.h" />
+    <ClInclude Include="Processor\InverseProcessor.h" />
+    <ClInclude Include="Processor\LevelsProcessor.h" />
     <ClInclude Include="Widget\Peg.h" />
     <QtMoc Include="Widget\ToolBoxWidget.h" />
     <ClInclude Include="Widget\WidgetManager.h" />
@@ -82,7 +83,6 @@
     <QtMoc Include="Widget\BaseWidget.h" />
     <QtMoc Include="GraphicsView.h" />
     <ClInclude Include="Image\BaseImage.h" />
-    <ClInclude Include="Image\BaseProcessor.h" />
     <ClInclude Include="Image\Dataheader.h" />
     <ClInclude Include="Image\GeneralImage.h" />
     <ClInclude Include="Image\ScanImage.h" />
